--- a/NaoPiseNoMeuJardim/.vscode/settings.json
+++ b/NaoPiseNoMeuJardim/.vscode/settings.json
@@ -56,5 +56,6 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "NaoPiseNoMeuJardim.sln"
+    "dotnet.defaultSolution": "NaoPiseNoMeuJardim.sln",
+    "editor.fontFamily": "Monocraft"
 }
